force-app/main/default/objects/Detalle_Tarifa__c/fields/Kilos__c.field-meta.xml
<CustomField>
    <fullName>Kilos__c</fullName>
    <label>Kilos</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>