force-app/main/default/objects/Detalle_Tarifa__c/fields/Tarifa__c.field-meta.xml
<CustomField>
    <fullName>Tarifa__c</fullName>
    <label>Tarifa</label>
    <referenceTo>Tarifa__c</referenceTo>
    <relationshipName>Detalles_Tarifas_EXPO</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>