force-app/main/default/objects/Detalle_Tarifa__c/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <label>Zona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zona 1</fullName>
            </value>
            <value>
                <fullName>Zona 2</fullName>
            </value>
            <value>
                <fullName>Zona 3</fullName>
            </value>
            <value>
                <fullName>Zona 4</fullName>
            </value>
            <value>
                <fullName>Zona 5</fullName>
            </value>
            <value>
                <fullName>Zona 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>